--- a/manager/api/sp_catalog_category_get_edit_detail_html.phtml
+++ b/manager/api/sp_catalog_category_get_edit_detail_html.phtml
@@ -236,10 +236,12 @@
 			</div>
 		</div>
 		<div class="tab-pane <% if Session("catalog_category_tab") = "#panel_tab_example2" then %>active<% end if %>" id="panel_tab_example2">
+			<div class="row">
+			<div class="col-sm-12">
 			<table class="table table-hover">
 				<thead>
 				<tr>
-				  <th width=350>
+				  <th>
 					Category Name
 				  </th>
 				  <th width=100 class="center">
@@ -254,7 +256,7 @@
 				  <th width=100 class="center">
 					D(%)
 				  </th>
-				  <th width=40 class="center">
+				  <th width=100 class="center">
 					Use
 				  </th>
 				</tr>
@@ -356,15 +358,12 @@
 				<% if x_dept_id = category_id then %>
 				<tr class="warning">
 					<td><%=sub_dept_name%></td>
-					<td class="center"><input type="text" placeholder="" id="dept_markup_A" name="dept_markup_A" class="form-control text-right" value="<%=markup_A%>"></td>
-					<td class="center"><input type="text" placeholder="" id="dept_markup_B" name="dept_markup_B" class="form-control text-right" value="<%=markup_B%>"></td>
-					<td class="center"><input type="text" placeholder="" id="dept_markup_C" name="dept_markup_C" class="form-control text-right" value="<%=markup_C%>"></td>
-					<td class="center"><input type="text" placeholder="" id="dept_markup_D" name="dept_markup_D" class="form-control text-right" value="<%=markup_D%>"></td>
+					<td class="center"><input type="text" placeholder="" id="dept_markup_A" name="dept_markup_A" class="form-control input-xs text-right" value="<%=markup_A%>"></td>
+					<td class="center"><input type="text" placeholder="" id="dept_markup_B" name="dept_markup_B" class="form-control input-xs text-right" value="<%=markup_B%>"></td>
+					<td class="center"><input type="text" placeholder="" id="dept_markup_C" name="dept_markup_C" class="form-control input-xs text-right" value="<%=markup_C%>"></td>
+					<td class="center"><input type="text" placeholder="" id="dept_markup_D" name="dept_markup_D" class="form-control input-xs text-right" value="<%=markup_D%>"></td>
 					<td class="center">
-						<div class="checkbox clip-check check-danger text-left">
-							<input type="checkbox" id="use_markup" name="use_markup" value="1" <%if use_markup then%>checked<%end if%>>
-							<label for="use_markup" style="padding:0px !important;margin:0px;"></label>
-						</div>
+						<input type="checkbox" id="use_markup" name="use_markup" class="form-control" value="1" <%if use_markup then%>checked<%end if%>>
 					</td>
 				</tr>
 				<% else %>
@@ -411,28 +410,33 @@
 					Next
 				%>
 			</table>
-			
-			<table class="table table-striped table-hover" id="sample_2">
+			</div>
+			</div>
+			<div class="row">
+			<div class="col-sm-12">
+			<table class="table table-striped table-hover" id="sample_2" widht="100%">
 				<thead>
 				<tr>
-					<th class="center">Product ID</th>
-					<th class="center">Name</th>
-					<th class="center">Cost</th>
-					<th class="center">A</th>
-					<th class="center">B</th>
-					<th class="center">C</th>
-					<th class="center">D</th>
-					<th class="center"></th>
-					<th class="center">Use</th>
-					<th class="center">Edit</th>
+					<th class="center" width="50">ID</th>
+					<th class="center">SKU</th>
+					<th class="center" width="80">Cost</th>
+					<th class="center" width="100">A</th>
+					<th class="center" width="100">B</th>
+					<th class="center" width="100">C</th>
+					<th class="center" width="100">D</th>
+					<th class="center" width="100"></th>
+					<th class="center" width="50">Use</th>
+					<th class="center"width="50"> Edit</th>
 				</tr>
 				</thead>
 				<tbody>
 					<tr>
-						<td colspan="9" class="dataTables_empty">Loading data from server</td>
+						<td colspan="10" class="dataTables_empty">Loading data from server</td>
 					</tr>
 				</tbody>
 			</table>
+			</div>
+			</div>
 		</div>
 		<div class="tab-pane <% if Session("catalog_category_tab") = "#panel_tab_example3" then %>active<% end if %>" id="panel_tab_example3">
 			<div class="form-group">
@@ -491,6 +495,8 @@
 		 
 		</div>
 		<div class="tab-pane <% if Session("catalog_category_tab") = "#panel_tab_example5" then %>active<% end if %>" id="panel_tab_example5">
+			<div class="row">
+			<div class="col-sm-12">
 			<table class="table table-striped table-bordered table-hover table-full-width" id="sample_1">
 				<thead>
 				<tr>
@@ -498,11 +504,10 @@
 					<th>Thumbnail</th>
 					<th>Name</th>
 					<th>SKU</th>
-					<th>Price</th>
+					<th>Cost</th>
+					<th>Price(D)</th>
 					<th>Qty</th>
-					<th>Category</th>
 					<th>Status</th>
-					<!--<th>Action</th>-->
 				</tr>
 				</thead>
 				<tbody>
@@ -511,6 +516,8 @@
 					</tr>
 				</tbody>
 			</table>
+			</div>
+			</div>
 		</div>
 	</div>
 </div>
@@ -544,9 +551,9 @@
 					/* Thumbnail */  { "sClass": "center","bSortable": false },
 					/* Name */  { "sClass": "left" },
 					/* sku */  { "sClass": "center" },
-					/* Price */  { "sClass": "right"},
+					/* Cost */  { "sClass": "right"},
+					/* Price */ { "sClass": "right"},
 					/* Qty */ { "sClass": "right"},
-					/* Category */ { "sClass": "center","bSortable": false },
 					/* Status*/  { "sClass": "center" ,"bSortable": false}
 				  ],
 				  
@@ -580,7 +587,7 @@
 				} 
 			});
 			
-			$('#sample_1_wrapper .dataTables_filter input').addClass("form-control input-sm").attr("placeholder", "Search");
+			$('#sample_1_wrapper .dataTables_filter input').addClass("form-control input-xs").attr("placeholder", "Search");
 			// modify table search input
 			$('#sample_1_wrapper .dataTables_length select').addClass("m-wrap small");
 			// modify table per page dropdown
@@ -606,17 +613,17 @@
 			function editRow(oTable, nRow) {
 				var aData = oTable.fnGetData(nRow);
 				var jqTds = $('>td', nRow);
-				jqTds[3].innerHTML = '<input type="text" class="form-control input-sm text-right" value="' + aData[3] + '" style="width:80px;">';
-				jqTds[4].innerHTML = '<input type="text" class="form-control input-sm text-right" value="' + aData[4] + '" style="width:80px;">';
-				jqTds[5].innerHTML = '<input type="text" class="form-control input-sm text-right" value="' + aData[5] + '" style="width:80px;">';
-				jqTds[6].innerHTML = '<input type="text" class="form-control input-sm text-right" value="' + aData[6] + '" style="width:80px;">';
+				jqTds[3].innerHTML = '<input type="text" class="form-control input-xs text-right" value="' + aData[3] + '" style="width:80px;">';
+				jqTds[4].innerHTML = '<input type="text" class="form-control input-xs text-right" value="' + aData[4] + '" style="width:80px;">';
+				jqTds[5].innerHTML = '<input type="text" class="form-control input-xs text-right" value="' + aData[5] + '" style="width:80px;">';
+				jqTds[6].innerHTML = '<input type="text" class="form-control input-xs text-right" value="' + aData[6] + '" style="width:80px;">';
 				if (aData[7] == "1")
 				{
-					jqTds[7].innerHTML = '<input type="checkbox" class="form-control checkbox" value="1" checked>';
+					jqTds[7].innerHTML = '<input type="checkbox" value="1" checked>';
 				}
 				else
 				{
-					jqTds[7].innerHTML = '<input type="checkbox" class="form-control checkbox" value="1">';
+					jqTds[7].innerHTML = '<input type="checkbox"  value="1">';
 				}
 
 				jqTds[8].innerHTML = '<a class="save-row" href=""><i class="fa fa-save"></i></a> | <a class="cancel-row" href=""><i class="fa fa-rotate-left"></i></a>';
@@ -731,14 +738,14 @@
 				"bProcessing": true,
 				"bStateSave": false,
 				"bJQueryUI": false,
-				"iDisplayLength": 20,
+				"iDisplayLength": 40,
 				"bServerSide": true,
 				"bAutoWidth": false,
-				"responsive": true,
+				"responsive": false,
 				"sAjaxSource": "api/sp_product_list_with_price.phtml?category_id=" + "<%=category_id%>" + "&v1=" + v1 + "&v2=" + v2 + "&v3=" + v3 + "&z1=",
 				"aoColumns": [ 
+					/* pf_id */  { "sClass": "left" },
 					/* SKU */  { "sClass": "left" },
-					/* Name */  { "sClass": "center","bSortable": false },
 					/* Cost */  { "sClass": "text-right" },
 					/* Price A */  { "sClass": "text-right" },
 					/* Price B*/  { "sClass": "text-right"},
@@ -750,6 +757,15 @@
 				  ],
 				  
 				"aaSorting": [[0, 'desc']],
+				/*
+				"sScrollX": "100%",
+				"sScrollXInner": "130%",
+				scrollY:        false,
+				scrollCollapse: true,
+				fixedColumns:   {
+					leftColumns: 1
+				},
+				*/
 				
 				"aLengthMenu": [
 					[10, 20, 30, 40, 50],
@@ -757,7 +773,7 @@
 				],
 				
 				"oLanguage": {
-					"sLengthMenu": "Show _MENU_ Rows",
+					"sLengthMenu": "_MENU_",
 					"sSearch": "",
 					"oPaginate": {
 						"sPrevious": "",
@@ -777,17 +793,19 @@
 					});
 				},
 				
+				
 				'fnRowCallback': function (nRow, aData, iDisplayIndex, iDisplayIndexFull) {
 				$('td', nRow).closest('tr').css('background', aData[7] === '1' ? '#ffcc7b' : '#fff');
 				return nRow;
+				
 				}
 			});
 			
-			$('#sample_2_wrapper .dataTables_filter input').addClass("form-control input-sm").attr("placeholder", "Search");
+			$('#sample_2_wrapper .dataTables_filter input').addClass("form-control input-xs").attr("placeholder", "Search");
 			// modify table search input
 			$('#sample_2_wrapper .dataTables_length select').addClass("m-wrap small");
 			// modify table per page dropdown
-			$('#sample_2_wrapper .dataTables_length select').select2();
+			//$('#sample_2_wrapper .dataTables_length select').select2();
 			// initialzie select2 dropdown
 		};
 		
@@ -1018,4 +1036,7 @@
 	});
 </script>
 <% end if  %>
+<style>
+th, td { white-space: nowrap; }
+</style>
 
