--- a/manager/catalog_category.phtml
+++ b/manager/catalog_category.phtml
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="assets/plugins/dynatree/src/skin-vista/ui.dynatree.css">
 <link href="vendor/select2/select2.min.css" rel="stylesheet" media="screen">
 <link href="vendor/DataTables/css/DT_bootstrap.css" rel="stylesheet" media="screen">
+<link href="vendor/DataTables/css/fixedColumns.dataTables.min.css" rel="stylesheet" media="screen">
 <!-- end: CSS REQUIRED FOR THIS PAGE ONLY -->
 <link rel="stylesheet" href="assets/css/custom.css">
 </head>	
@@ -200,6 +201,7 @@
 	  Are you sure you want to do this?
 	</div>
 	
+	</style>
 	<!--#INCLUDE FILE="include/js.phtml"-->
 	<!-- start: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
 	<script src="assets/plugins/jquery-ui/jquery-ui-1.10.1.custom.min.js" type="text/javascript"></script>
@@ -211,6 +213,7 @@
 	<script src="assets/plugins/bootstrap-modal/js/bootstrap-modal.js"></script>
 	<script src="assets/plugins/bootstrap-modal/js/bootstrap-modalmanager.js"></script>
 	<script src="vendor/DataTables/jquery.dataTables.min.js"></script>
+	<script src="vendor/DataTables/dataTables.fixedColumns.min.js"></script>
 	<!-- end: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
 	<script src="assets/js/main.js"></script>
 	<!-- start: JavaScript Event Handlers for this page -->
@@ -263,6 +266,10 @@
 				},
 				onDeactivate: function (node) {
 					//$("#echoActive").text("-");
+				},
+				
+				onCreate: function(node, nodeSpan) {
+					$("#tree3").dynatree("getTree").activateKey(jQuery("#dept_id").val());
 				},
 				
 				dnd: {
@@ -411,7 +418,7 @@
 							successHandler1.show();
 							window.scrollTo(0,0);
 							$("#tree3").dynatree("getTree").reload();
-							//window.location.href = "catalog_category.phtml";
+							
 						},
 						error: function() {
 							errorHandler2.show();
